# xwrl6432-pac

./: Cargo.toml  LICENSE  README.md  sanitize_xml.py
src/: app_cancfg.rs  app_canecc.rs  app_cfg_qspi.rs  app_crc.rs  app_ctrl.rs  app_dcc.rs  app_ecc_agg.rs  app_esm.rs  app_hwa_adcbuf_ctrl.rs  app_i2c.rs  app_lin.rs  app_prcm.rs  app_pwm.rs  app_rcm.rs  app_rti.rs  app_spi_0.rs  app_uart_1.rs  gpadc_ctrl.rs  hwa_cfg.rs  lib.rs  pbist.rs  plldig_ctrl.rs  top_debugss.rs  top_gio.rs  top_io_mux.rs  topss_ctrl.rs  tpcc_a.rs  tptc_a0.rs
src/app_cancfg/: cccr.rs  crel.rs  cust.rs  dbtp.rs  ecr.rs  endn.rs  gfc.rs  hpms.rs  ie.rs  ile.rs  ils.rs  ir.rs  nbtp.rs  ndat1.rs  ndat2.rs  psr.rs  res00.rs  res01.rs  res02.rs  res03.rs  res04.rs  res05.rs  res06.rs  res07.rs  res08.rs  res09.rs  res10.rs  res11.rs  res12.rs  res13.rs  res14.rs  res15.rs  res16.rs  rwd.rs  rxbc.rs  rxesc.rs  rxf0a.rs  rxf0c.rs  rxf0s.rs  rxf1a.rs  (+35 more)
src/app_canecc/: aggr_enable_clr.rs  aggr_enable_set.rs  aggr_status_clr.rs  aggr_status_set.rs  ctrl.rs  ded_enable_clr_reg0.rs  ded_enable_set_reg0.rs  ded_eoi_reg.rs  ded_status_reg0.rs  err_ctrl1.rs  err_ctrl2.rs  err_stat1.rs  err_stat2.rs  err_stat3.rs  rev.rs  sec_enable_clr_reg0.rs  sec_enable_set_reg0.rs  sec_eoi_reg.rs  sec_status_reg0.rs  stat.rs  vector.rs
src/app_cfg_qspi/: intc_eoi.rs  intr_enable_clear.rs  intr_enable_set.rs  intr_status_enabled_clear.rs  intr_status_raw_set.rs  mss_qspi_reserved1.rs  mss_qspi_reserved2.rs  mss_qspi_reserved3.rs  mss_qspi_reserved4.rs  mss_qspi_reserved5.rs  pid.rs  spi_cmd.rs  (+17 more)
xml/: iwrl6432_updated.svd
(+1401 files in other folders)
