[package]
name = "xwrl64xx-pac"
version = "0.6.0"
authors = ["Abram Haich"]
edition = "2018"
homepage = "https://github.com/abeanater/xwrl64xx-pac"
description = "A Peripheral Access Crate for the ti xwrl64xx radar devkit"
license = "MIT"
repository = "https://github.com/abeanater/xwrl64xx-pac"

[dependencies]
cortex-m = "0.7.3"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = ">=0.6.15,<0.8"

[dependencies.critical-section]
optional = true
version = "1.0.0"

[features]
rt = ["cortex-m-rt/device"]
